# MediaRender

FFMPEG-rotation-addwords/: .GetPersect*.cpp.swp  CMakeLists.txt  CharacterImage.cpp  CharacterImage.h  Distance.cpp  Distance.h  FrameComposed.cpp  FrameComposed.h  FrameStruct.h  GetMp3data.cpp  GetMp3data.h  GetPerspectiveMatrix.cpp  GetPerspectiveMatrix.h  ImagePar.cpp  ImagePar.h  InputParameter.cpp  InputParameter.h  Jud.cpp  MatrixCompute.cpp  MatrixCompute.h  MediaMuxer.cpp  MediaMuxer.h  ReadImage.cpp  ReadImage.h  ReadImageData.cpp  ReadImageData.h  ReadPng.cpp  Video2FrameRgb.cpp  Video2FrameRgb.h  inRect.h  main.cpp  picture.cpp  picture.h  ppm.cpp  ppm.h  testchar.cpp  text.cpp  text.h
FFMPEG-rotation-addwords/Media/: 0000.ppm  config.json  data0.json  data1.json  data10.json  data11.json  data12.json  data17.json  data2.json  data3.json  data4.json  data5.json  data6.json  data7.json  data8.json  data9.json  edit_file.json  present_data.json
FFMPEG-rotation-addwords/lib/include/libifRect/: inRect.h
FFMPEG-rotation-addwords/lib/include/libppm/: ppm.h
FFMPEG-rotation-addwords/lib/include/librgb2yuv/: rgb2yuv.h
FFMPEG-rotation-addwords/lib/lib/: libfdk-aac.la  libfdk-aac.so.1.0.0  libmp3lame.la  libxvidcore.so.4.1
FFMPEG-rotation-addwords/lib/lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
